--- a/client/src/components/Component.css
+++ b/client/src/components/Component.css
@@ -22,3 +22,19 @@
     cursor: pointer;
 
 }
+
+.rooms-container {
+    display: flex;
+    background-color: darkgrey;
+}
+
+.rooms-container > div {
+    background-color: #f1f1f1;
+    color: black;
+    width: 75px;
+    height: 20px;
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
+    line-height: 20px;
+}
