--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,14 +36,20 @@ h1 {
   line-height: 1.1;
 }
 
+h2 {
+
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  color: #1a1a1a;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #FFFFFF;
+  border-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
