--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,51 +1,20 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  height: auto;
+  margin: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  color: var(--black);
+  background-color: var(--beige);
+  font-family: Prompt, sans-serif;
+  --black: #000000;
+  --white: #ffffff;
+  --brick: #D16532;
+  --beige: #F4EFE5;
+  --yellow: #EEDBB5;
 }
 
 .tab {
-  background-color: #D16532;
+  background-color: var(--brick);
   display: block;
-}
-
-.content {
-  background-color: #F4EFE5;
+  color: var(--white);
 }
