--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,23 @@ body {
   min-height: 100vh;
 }
 
+input {
+  width: auto;
+  height: 30px;
+  border: 1px solid white;
+  border-radius: 6px;
+  outline: 0;
+  background-color: white;
+  padding: 0 8px;
+  font-size: 1em;
+  font-size: inherit;
+  color: black;
+}
+
+input:focus {
+  border: 1px solid #D16532;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -41,7 +58,7 @@ h2 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 6px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   color: #1a1a1a;
@@ -54,7 +71,8 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #D16532;
+  color: #D16532;
 }
 button:focus,
 button:focus-visible {
