--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
+/* Header: Press Start 2P */
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+/* Body : Prompt */
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap');
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -31,44 +36,18 @@ body {
   min-height: 100vh;
 }
 
-input {
-  width: auto;
-  height: 30px;
-  border: 1px solid white;
-  border-radius: 6px;
-  outline: 0;
-  background-color: white;
-  padding: 0 8px;
-  font-size: 1em;
-  font-size: inherit;
-  color: black;
-}
-
-input:focus {
-  border: 1px solid #D16532;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-h2 {
-
-}
-
 button {
   border-radius: 6px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.6em 1.2em;
   color: #1a1a1a;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
+  font-family: 'Press Start 2P', inherit;
   background-color: #FFFFFF;
   border-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  /* transition: border-color 0.25s; */
 }
 button:hover {
   border-color: #D16532;
