--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,6 @@
 /* Body : Prompt */
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap');
 
-
 #root {
   box-sizing: border-box;
   width: 100%;
@@ -18,6 +17,10 @@
   --brick: #D16532;
   --beige: #F4EFE5;
   --yellow: #EEDBB5;
+
+  /* display: flex;
+  justify-content: center;
+  align-content: center; */
 }
 
 h1, h2, h3, button {
