--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,6 +57,11 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+button:active {
+  border-color: #D16532;
+  background-color: #D16532;
+  color: #FFFFFF;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
