--- a/client/src/pages/Room/Room.css
+++ b/client/src/pages/Room/Room.css
@@ -1,10 +1,10 @@
-.playerA {
-    grid-area: playerA;
+.me {
+    grid-area: me;
     width: 200px;
 }
 
-.playerB {
-    grid-area: playerB;
+.opponent {
+    grid-area: opponent;
     width: 200px;
 }
 
@@ -26,7 +26,7 @@
     display: grid;
     /* background-color: aqua; */
     grid-template-areas: 
-        'playerA status status playerB'
+        'me status status opponent'
         'piano piano piano piano';
     gap: 10px;
     padding: 10px;
