--- a/client/src/components/Player/Player.css
+++ b/client/src/components/Player/Player.css
@@ -4,6 +4,9 @@
     margin: 0;
 }
 
-/* .avartar {
-
-} */
+.avatar {
+    width: 150px;
+    height: 150px;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
