--- a/client/src/components/ChatRoom/ChatRoom.css
+++ b/client/src/components/ChatRoom/ChatRoom.css
@@ -1,16 +1,32 @@
 .chat-messages {
   background-color: #ffffff;
   border: 1px solid #ccc;
+  border-radius: 10px;
   height: 300px;
   overflow-y: auto;
-  padding: 10px;
-  margin-bottom: 20px;
-  margin: 20px; /* Adds margin from all sides */
+  margin: 5px 20px 20px;
+  display: grid;
+  grid-template-rows: 250px 50px;
+}
+
+.chat-message-box {
+  margin-top: 10px;
+  /* display: flex; */
+  overflow-y: auto;
+  /* flex-direction: column-reverse; */
+  /* background-color: aqua; */
 }
 
 /* Styling for the individual chat message */
 .chat-message {
-  margin-bottom: 10px;
+  margin-top: 0px;
+}
+
+.chat-input-tab {
+  background-color: var(--brick);
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 /* Style for the input and send button */
@@ -18,26 +34,34 @@
   display: flex;
 }
 
-.chat-input input {
+.chat-input-input {
   flex: 1;
   height: 40px;
   padding: 0 10px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 10px;
+  margin: 0px 5px 0px;
 }
 
-.chat-input button {
-  height: 40px;
-  margin-left: 10px;
-  padding: 0 20px;
+.chat-input-button {
+  /* height: 40px; */
+  margin-right: 10px;
+  /* padding: 0 20px;
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  width: 100px; */
 }
 
 .username {
   font-weight: bold;
   color: #D16532;
+}
+
+.chat-room-title {
+  line-height: 1em;
+  margin-top: 50px;
+  margin-bottom: 5px;
 }
