--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,7 @@ body {
   margin: 0;
   display: flex;
   /* place-items: center; */
-  min-width: 320px;
+  min-width: 1000px;
   min-height: 100vh;
 }
 
@@ -43,7 +43,7 @@ button {
   color: #1a1a1a;
   font-size: 1em;
   font-weight: 500;
-  font-family: 'Press Start 2P', inherit;
+  font-family: 'Press Start 2P', 'Prompt', sans-serif;
   background-color: #FFFFFF;
   border-color: #1a1a1a;
   cursor: pointer;
