--- a/client/src/pages/Room/Room.css
+++ b/client/src/pages/Room/Room.css
@@ -1,3 +1,8 @@
+.room-title {
+    line-height: 1em;
+    margin-bottom: 0;
+}
+
 .me {
     grid-area: me;
     width: 200px;
@@ -8,9 +13,20 @@
     width: 200px;
 }
 
-.status {
+/* v1 */
+/* .status {
     grid-area: status;
     width: 300px;
+    overflow-wrap: break-word;
+    padding: 20px;
+    background-color: aqua;
+} */
+
+/* v2 */
+.status {
+    grid-area: status;
+    min-width: 500px;
+    height: 200px;
     overflow-wrap: break-word;
     padding: 20px;
 }
@@ -19,24 +35,36 @@
     grid-area: piano;
     align-content: center;
     justify-content: center;
-    background-color: var(--beige);
+    /* background-color: azure; */
 }
 
-.player-container {
+/* v1 */
+/* .player-container {
     display: grid;
-    /* background-color: aqua; */
     grid-template-areas: 
         'me status status opponent'
         'piano piano piano piano';
     gap: 10px;
     padding: 10px;
-    /* width: 600px; */
+    align-content: center;
+    justify-content: center;
+} */
+
+/* v2 */
+.player-container {
+    display: grid;
+    grid-template-areas: 
+        'me status status status opponent'
+        'me piano piano piano opponent'
+        'me piano piano piano opponent';
+    gap: 10px;
+    padding: 10px;
     align-content: center;
     justify-content: center;
 }
 
 .player-container > div {
-    background-color: var(--beige);
+    /* background-color: var(--beige); */
     text-align: center;
     margin: 0;
     padding: 10px 0;
