--- a/client/src/components/Status/Status.css
+++ b/client/src/components/Status/Status.css
@@ -1,13 +1,13 @@
 .button-clicked {
     color: var(--white);
-    background-color: var(--brick);
-    border-color: var(--brick);
+    background-color: green;
+    border-color: green;
 }
 
 .button-clicked:hover {
-    color: var(--brick);
+    color: green;
     background-color: var(--white);
-    border-color: var(--brick);
+    border-color: green;
 }
 
 .button-disabled {
