--- a/client/src/components/Piano/Piano.css
+++ b/client/src/components/Piano/Piano.css
@@ -1,11 +1,9 @@
 .piano-container {
-    margin-top: 20px;
-    margin-bottom: 10px;
     display: flex;
     flex-direction: row;
-    /* background-color: blue; */
     align-content: center;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .piano-container > div {
@@ -37,11 +35,38 @@
 }
 
 .display {
-    height: 70px;
+    height: 80px;
     margin: 0;
+    margin-top: 0;
+    padding: 0;
+}
+
+.display-title {
+    font-family: 'Press Start 2P', 'inherit';
+    font-size: 1.2em;
+    line-height: 2em;
 }
 
 .display-note {
     display: inline;
     margin: 0 5px 10px;
+}
+
+.sound-title {
+    display: inline-block;
+    font-family: 'Press Start 2P', 'inherit';
+    font-size: 1em;
+    line-height: 2em;
+}
+
+.button-clicked {
+    color: var(--white);
+    background-color: var(--brick);
+    border-color: var(--brick);
+}
+
+.button-clicked:hover {
+    color: var(--white);
+    background-color: var(--brick);
+    border-color: var(--brick);
 }
