--- a/client/src/components/Status/Status.css
+++ b/client/src/components/Status/Status.css
@@ -1,12 +1,12 @@
-.button-clicked {
+.button-ready-clicked {
     color: var(--white);
     background-color: green;
     border-color: green;
 }
 
-.button-clicked:hover {
-    color: green;
-    background-color: var(--white);
+.button-ready-clicked:hover {
+    color: var(--white);
+    background-color: green;
     border-color: green;
 }
 
@@ -20,3 +20,16 @@
     border-color: gray;
     background-color: white;
 }
+
+.button-clicked {
+    color: var(--white);
+    background-color: var(--brick);
+    border-color: var(--brick);
+}
+
+.button-clicked:hover {
+    color: var(--white);
+    background-color: var(--brick);
+    border-color: var(--brick);
+} 
+
