--- a/client/src/components/Player/Player.css
+++ b/client/src/components/Player/Player.css
@@ -38,3 +38,9 @@
 	margin-left: -15px;
 	margin-top: -15px;
 }
+
+.reaction-button {
+    border-color: var(--white);
+    /* border: 0px; */
+    margin: 5px;
+}
