fix bg colors + deco

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -4,3 +4,25 @@
     margin-top: 0;
     margin-bottom: 5px;
 }
+
+.color-container {
+    /* padding-left: 200px; */
+    /* padding-right: 200px; */
+    margin-left: 35%;
+    width: 30%;
+    margin-right: 35%;
+    align-self: center;
+    justify-self: center;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    /* gap: 5px; */
+}
+
+.color {
+    width: 50px;
+}
+
+.color:hover {
+    cursor: pointer;
+}
