--- a/client/src/components/Piano/Piano.css
+++ b/client/src/components/Piano/Piano.css
@@ -39,6 +39,9 @@
     margin: 0;
     margin-top: 0;
     padding: 0;
+    /* width: 600px;
+    overflow-x: hidden;
+    overflow-y: scroll; */
 }
 
 .display-title {
